@@ -61,6 +61,22 @@ case "$target" in
         ;;
 esac
 
+# Set runtime shared library paths as needed 
+
+case "$target" in
+    *-*-linux*)
+	SMPEG_RLD_FLAGS="-Wl,-rpath,\${exec_prefix}/lib"
+	;;
+    *-*-freebsd*)
+	SMPEG_RLD_FLAGS="-Wl,-rpath,\${exec_prefix}/lib"
+	;;
+    *-*-solaris*)
+	SMPEG_RLD_FLAGS="-R\${exec_prefix}/lib"
+	;;
+esac
+
+AC_SUBST(SMPEG_RLD_FLAGS)
+
 dnl Add compiler-specific optimization flags
 
 AC_ARG_ENABLE(debug,
@@ -143,13 +159,39 @@ AC_ARG_ENABLE(opengl_player,
               , enable_opengl_player=yes)
 have_glu=no
 if test x$enable_opengl_player = xyes; then
-    dnl FIXME:  Need a better test here...
-    #AC_CHECK_HEADER(GL/gl.h, have_gl=yes)
-    AC_CHECK_LIB(GL, glXCreateContext, have_gl=yes)
-    #AC_CHECK_HEADER(GL/glu.h, have_glu=yes)
-    AC_CHECK_LIB(GLU, gluOrtho2D, have_glu=yes)
+    case "$target" in
+        *-*-cygwin* | *-*-mingw32*)
+            SYS_GL_LIBS="-lopengl32 -lglu32"
+            ;;
+        *-*-beos*)
+            SYS_GL_LIBS="-lGL -lGLU"
+            ;;
+        *)
+            AC_PATH_X
+            AC_PATH_XTRA
+            if test x$have_x = xyes; then
+                CFLAGS="$CFLAGS $X_CFLAGS"
+                SYS_GL_LIBS="$X_LIBS -lGL -lGLU"
+            else
+                SYS_GL_LIBS="-lGL -lGLU"
+            fi
+            ;;
+    esac
+    AC_MSG_CHECKING(for OpenGL support)
+    have_opengl=no
+    AC_TRY_COMPILE([
+     #include <GL/gl.h>
+    ],[
+    ],[
+    have_opengl=yes
+    ])
+    AC_MSG_RESULT($have_opengl)
+    if test x$have_opengl = xyes; then
+        GL_LIBS="$SYS_GL_LIBS"
+    fi
 fi
-AM_CONDITIONAL(HAVE_MESA, test x$have_gl = xyes -a x$have_glu = xyes)
+AC_SUBST(GL_LIBS)
+AM_CONDITIONAL(HAVE_OPENGL, test x$have_opengl = xyes)
 
 dnl Disable assertions in release builds
 AC_ARG_ENABLE(assertions,
@@ -187,6 +229,7 @@ if test x$GCC = xyes; then
     CC="$save_CC"
     CFLAGS="$save_CFLAGS"
 fi
+
 
 # Finally create all the generated files
 AC_OUTPUT([
